# cloud-desktop-sync-client

./: .drone.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  NEXTCLOUD.cmake  README.md  VERSION.cmake  appveyor.ini  appveyor.yml  theme.qrc.in
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: command-rebase.yml
.tx/: config
admin/linux/: count_compiler_warnings.py  upload-appimage.sh
admin/linux/debian/: drone-build.sh
admin/win/msi/: CMakeLists.txt  make-msi.bat.in
doc/: Makefile  README.md  advancedusage.rst  architecture.rst  autoupdate.rst  conf.py  conffile.rst  conflicts.rst  elyranurcmd.rst  faq.rst  glossary.rst  index.rst  installing.rst  introduction.rst  lowdiskspace.rst  navigating.rst  options.rst  troubleshooting.rst  visualtour.rst
doc/dev/: Doxyfile.in  sync-algorithm.md
man/: elyranur.1.rst  elyranurcmd.1.rst
shell_integration/nautilus/: setappname.sh  syncstate.py
shell_integration/windows/NCContextMenu/: NCContextMenu.rc
src/cmd/: CMakeLists.txt
src/common/: checksums.cpp  constants.h  filesystembase.cpp  ownsql.cpp  syncjournaldb.cpp  utility.cpp  utility_win.cpp  vfs.cpp
src/csync/: CMakeLists.txt
src/gui/: CMakeLists.txt  EmojiPicker.qml  UserStatusSelector.qml  UserStatusSelectorDialog.qml  accountmanager.cpp  accountsettings.cpp  accountstate.cpp  accountstate.h  application.cpp  conflictdialog.cpp  conflictdialog.h  conflictsolver.cpp  conflictsolver.h  connectionvalidator.cpp  emojimodel.cpp  emojimodel.h  folder.cpp  foldercreationdialog.cpp  foldercreationdialog.h  folderman.cpp  folderstatusdelegate.cpp  folderstatusmodel.cpp  folderwatcher.cpp  folderwizard.cpp  generalsettings.cpp  guiutility.cpp  iconutils.h  legalnotice.cpp  lockwatcher.cpp  main.cpp  navigationpanehelper.cpp  notificationconfirmjob.cpp  ocsjob.cpp  ocsnavigationappsjob.cpp  ocsnavigationappsjob.h  owncloudsetupwizard.cpp  proxyauthhandler.cpp  remotewipe.cpp  selectivesyncdialog.cpp  settingsdialog.cpp  (+9 more)
src/gui/creds/: flow2auth.cpp  (+5 more)
src/libsync/: CMakeLists.txt  abstractnetworkjob.cpp  abstractpropagateremotedeleteencrypted.cpp  abstractpropagateremotedeleteencrypted.h  accessmanager.cpp  account.cpp  bandwidthmanager.cpp  capabilities.cpp  clientproxy.cpp  clientsideencryption.cpp  clientsideencryptionjobs.cpp  configfile.cpp  configfile.h  cookiejar.cpp  deletejob.cpp  discoveryphase.cpp  elyranurtheme.cpp  elyranurtheme.h  encryptfolderjob.cpp  encryptfolderjob.h  logger.cpp  networkjobs.cpp  networkjobs.h  ocsuserstatusconnector.cpp  ocsuserstatusconnector.h  owncloudpropagator.cpp  propagatedownload.cpp  propagatedownloadencrypted.cpp  propagateremotedelete.cpp  propagateremotedeleteencrypted.cpp  propagateremotedeleteencrypted.h  propagateremotedeleteencryptedrootfolder.cpp  propagateremotedeleteencryptedrootfolder.h  propagateremotemkdir.cpp  propagateremotemove.cpp  propagateupload.cpp  propagateuploadencrypted.cpp  propagatorjobs.cpp  pushnotifications.cpp  pushnotifications.h  (+7 more)
src/libsync/vfs/xattr/: CMakeLists.txt  vfs_xattr.cpp  vfs_xattr.h  xattrwrapper.h  xattrwrapper_linux.cpp
test/: CMakeLists.txt  elyranur_add_test.cmake  pushnotificationstestutils.cpp  pushnotificationstestutils.h  testelyranurpropagator.cpp  testiconutils.cpp  testpushnotifications.cpp  testremotewipe.cpp  testsetuserstatusdialog.cpp  testsyncxattr.cpp  testtheme.cpp  testutility.cpp  themeutils.cpp  themeutils.h
test/csync/: CMakeLists.txt
theme/: elyranur.VisualElementsManifest.xml
theme/Style/: Style.qml
translations/: client_af.ts  client_bg.ts  client_br.ts  client_ca.ts  client_cs.ts  client_da.ts  client_de.ts  client_el.ts  client_en.ts  client_en_GB.ts  client_eo.ts  client_es.ts  client_es_AR.ts  client_es_CL.ts  client_es_CO.ts  client_es_CR.ts  client_es_DO.ts  client_es_EC.ts  client_es_GT.ts  client_es_HN.ts  client_es_MX.ts  client_es_SV.ts  client_et.ts  client_eu.ts  client_fa.ts  client_fi.ts  client_fr.ts  client_gl.ts  client_he.ts  client_hr.ts  client_hu.ts  client_id.ts  client_is.ts  client_it.ts  client_ja.ts  client_ko.ts  client_lt_LT.ts  client_lv.ts  client_mk.ts  client_nb_NO.ts  (+18 more)
(+38 files in other folders)
